# whe.re

./: netlify.toml
backend/: Cargo.toml  TODO
backend/geohash/: Cargo.toml
backend/geohash/src/: base32.rs  lib.rs
backend/geojson/: Cargo.toml
backend/geojson/src/: lib.rs
backend/graph/: Cargo.toml
backend/graph/src/: lib.rs
backend/gtfs/: Cargo.toml  log
backend/gtfs/src/: lib.rs
backend/osm/: Cargo.toml
backend/osm/src/: lib.rs  node_index.rs  poi.rs
backend/osm/src/walkers/: explore.rs
backend/path/: Cargo.toml
backend/path/src/: api.rs  converters.rs  main.rs  reduce.rs
backend/quadtree/: Cargo.toml
backend/quadtree/src/: lib.rs
front/: .env.production  README.md  TODO  package-lock.json  package.json  vue.config.js
front/public/: _redirects  index.html
front/src/: App.vue  Home.vue  Score.vue  main.js  poi_fa.js
front/src/components/: Constraint.vue  ConstraintPicker.vue  Map.vue  Node.vue  NodeSearch.vue  Poi.vue  PoiSearch.vue  ScoreConstraintPicker.vue
front/tests/: test.html
