[package]
name = "osm"
version = "0.1.0"
authors = ["Pascal Bouchareine <pascal@gandi.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
radix_trie = "0.1.6"
# XXX When time find a way to remove this dep or make it optional? 
graph = {path = "../graph"}
quadtree = {path = "../quadtree"}
log = "0.4.8"
env_logger = "0.7.1"
pbf-reader = {path = "../rust-osm-reader" } #"0.1.9"
geohash = {path = "../geohash" } #"0.1.9"
gtfs = {path = "../gtfs"}
